--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- <link rel="icon" type="image/svg+xml" href="./src/assets/app__logo_test.png" /> -->
   <link rel="shortcut icon" href="./src/assets/favicon.svg" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dictoinary App</title>
+  <title>Dictionary App</title>
 </head>
 
 <body>
